ajout du dossier gallery js + filtres

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -36,6 +36,12 @@
 	</section>
 	<section id="portfolio">
 		<h2>Mes Projets</h2>
+		<div class="filters flexCenter">
+			<div class="all_filter btn_filters flexCenter"><span>Tous</span></div>
+			<div class="object_filter btn_filters flexCenter"><span>Objets</span></div>
+			<div class="apartment_filter btn_filters flexCenter"><span>Appartements</span></div>
+			<div class="hotel_restaurant_filter btn_filters flexCenter"><span>Hôtel & restaurants</span></div>
+		</div>
 		<div class="gallery">
 			<figure>
 				<img src="assets/images/abajour-tahina.png" alt="Abajour Tahina">
@@ -105,5 +111,6 @@
 		</ul>
 	</nav>
 </footer>
+<script src="script.js"></script>
 </body>
 </html>
