--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -111,6 +111,6 @@
 		</ul>
 	</nav>
 </footer>
-<script src="script.js"></script>
+<script src="./assets/js/gallery.js"></script>
 </body>
 </html>
