--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -31,14 +31,14 @@
       </header>
       <section class="main-of-login-page">
         <h2>Log in</h2>
-        <form>
+        <form id="login-form">
           <div>
             <label>E-mail</label>
-            <input type="email" id="userEmailInput" required />
+            <input type="email" id="email-input" required />
           </div>
           <div>
             <label>Mot de passe</label>
-            <input type="password" id="userPwdinput" required />
+            <input type="password" id="password-input" required />
           </div>
 
           <div class="login-button-container">
