--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -8,16 +8,21 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
 	<meta name="description" content="">
+	<script src="https://kit.fontawesome.com/45352d0537.js" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="./assets/style.css">
+	<link rel="stylesheet" href="./assets/modal.css">
+
 </head>
 <body>
+	
 <header>
 	<h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
 	<nav>
 		<ul>
 			<li>projets</li>
 			<li>contact</li>
-			<li><a href="login.html">login</a></li>
+			<li class="login"><a href="login.html">login</a></li>
+      		<li class="logout"><a href="index.html">logout</a> </li>
 			<li><img src="./assets/icons/instagram.png" alt="Instagram" width="20" height="20"></li>
 		</ul>
 	</nav>
@@ -35,14 +40,28 @@
 		</article>
 	</section>
 	<section id="portfolio">
-		<h2>Mes Projets</h2>
+		<div class="btnProjets">
+			<div class="mes-projets-title-container"><h2>Mes Projets</h2></div>
+			<i class="fa-solid fa-pen-to-square"></i>
+			<button id="modifier">Modifier</button>
+		</div>
+		<div id="modal" class="modal">
+			<div class="modal-content">
+			  <span class="close">&times;</span>
+			  <h2>Galerie photo</h2>
+			  <div class="modal-body">
+				<!-- Contenu de la galerie, images, etc. -->
+			  </div>
+			</div>
+		  </div>		  
+
 		<div class="filters flexCenter">
 			<div class="all_filter btn_filters flexCenter"><span>Tous</span></div>
-			<div class="object_filter btn_filters flexCenter"><span>Objets</span></div>
-			<div class="apartment_filter btn_filters flexCenter"><span>Appartements</span></div>
-			<div class="hotel_restaurant_filter btn_filters flexCenter"><span>Hôtel & restaurants</span></div>
+			<div class="object_filter btn_filters flexCenter" value="1"><span>Objets</span></div>
+			<div class="apartment_filter btn_filters flexCenter" value="2"><span>Appartements</span></div>
+			<div class="hotel_restaurant_filter btn_filters flexCenter" value="3"><span>Hôtel & restaurants</span></div>
 		</div>
-		<div class="gallery">
+		<div class="gallery" id="gallery">
 		</div>
 	</section>
 	<section id="contact">
@@ -68,5 +87,7 @@
 	</nav>
 </footer>
 <script src="./assets/js/gallery.js"></script>
+<script src="./assets/js/modal.js"></script>
+<script src="./assets/js/login.js"></script>
 </body>
 </html>
