--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -51,10 +51,14 @@
 			  <h2>Galerie photo</h2>
 			  <div class="modal-body">
 				<!-- Contenu de la galerie, images, etc. -->
-				
 			  </div>
+				<div class="modalBtn">
+					<button id="ajouter-photo">Ajouter une photo</button>
+					<button id="supprimer-galerie">Supprimer la galerie</button>
+				</div>
+			  
 			</div>
-		  </div>		  
+		</div>		  
 
 		<div class="filters flexCenter">
 			<div class="all_filter btn_filters flexCenter"><span>Tous</span></div>
