--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -78,7 +78,7 @@
 				<!-- <label for="image">Image :</label> -->
 				<!-- <input type="file" id="image" name="image"><br><br> -->
 				<label for="title">Titre :</label><br><br>
-				<input type="text" id="title" name="title"><br><br>
+				<input type="text" id="title" name="title" required><br><br>
 				<label for="category">Catégorie :</label><br><br>
 				<select id="category" name="category">
 					<option value="objets">Objets</option>
